--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  body {
-    @apply font-sans antialiased bg-stone-50;
-  }
+    body {
+        @apply font-sans antialiased bg-white;
+    }
 }
